# secret-santa

./: .pre-commit-config.yaml
backend/: .env.sample  .gitignore  .pylintrc  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
backend/src/: manage.py
backend/src/apps/api/: admin.py  models.py  tests.py  urls.py  views.py
backend/src/apps/api/migrations/: 0001_initial.py  0002_box_box_state.py  0002_box_box_state_alter_message_message_from.py  0003_alter_message_message_from.py
backend/src/apps/api/serializers/: __init__.py  box_serializers.py  chat_serializers.py  questionary_serializers.py  toss_serializers.py  user_serializers.py
backend/src/apps/api/services/: toss.py
backend/src/apps/api/tests/: box_views_tests.py  chat_views_tests.py  email_notification_tests.py  questionary_views_tests.py  user_views_tests.py
backend/src/apps/core/: mixins.py  resources.py  tasks.py  utils.py
backend/src/apps/core/templates/: email_notification.html
backend/src/apps/core/tests/: test_utils.py
backend/src/common/utils/: docs_schema.py
backend/src/scripts/: run_box_views_tests.sh  run_questionary_views_tests.sh  run_user_views_tests.sh
backend/src/secret_santa/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.json  .prettierrc.json  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.scss  index.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: BoxChatPage.tsx  BoxGamePage.tsx  BoxPage.tsx  BoxQuestionaryPage.tsx  HomePage.tsx  NotFoundPage.tsx  RulesPage.tsx
(+14 files in other folders)
